2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* examples/Examples.java
		^ Use new methods for saving and parsing

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Context.iuml
	* src/lattice/Context.java
	* src/lattice/ImplicationalSystem.iuml
	* src/lattice/ImplicationalSystem.java
	* test/lattice/ContextTest.java
	* test/lattice/ImplicationalSystemTest.java
	* src/lattice/ContextReader.iuml
	* src/lattice/ContextReader.java
	* src/lattice/ContextReaderFactory.iuml
	* src/lattice/ContextReaderFactory.java
	* src/lattice/ContextReaderText.iuml
	* src/lattice/ContextReaderText.java
	* src/lattice/ImplicationalSystemReader.iuml
	* src/lattice/ImplicationalSystemReader.java
	* src/lattice/ImplicationalSystemReaderFactory.iuml
	* src/lattice/ImplicationalSystemReaderFactory.java
	* src/lattice/ImplicationalSystemReaderText.iuml
	* src/lattice/ImplicationalSystemReaderText.java
		^ Implement abstract reader pattern for Context and ImplicationalSystem

2014-05-01 Christophe Demko <chdemko@gmail.com>
	* doc/api/README.md
	* src/dgraph/DGraph.iuml
	* src/dgraph/DGraph.java
	* src/dgraph/DGraphWriter.iuml
	* src/dgraph/DGraphWriter.java
	* src/dgraph/DGraphWriterDot.iuml
	* src/dgraph/DGraphWriterDot.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/ClosureSystem.iuml
	* src/lattice/ClosureSystem.java
	* src/lattice/Concept.java
	* src/lattice/Context.iuml
	* src/lattice/Context.java
	* src/lattice/ImplicationalSystem.iuml
	* src/lattice/ImplicationalSystem.java
	* src/lattice/Lattice.iuml
	* src/lattice/Lattice.java
	* src/lattice/ContextWriter.iuml
	* src/lattice/ContextWriter.java