@@ -1,0 +1,5 @@
+package lattice {
+    interface ArrowRelationWriter {
+        +void write(ArrowRelation arrow, BufferedWriter file)
+    }
+}
