@@ -1,0 +1,83 @@
+package lattice;
+
+/*
+ * ArrowRelationWriterFactory.java
+ *
+ * Copyright: 2013 Karell Bertet, France
+ *
+ * License: http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.html CeCILL-B license
+ *
+ * This file is part of lattice, free package. You can redistribute it and/or modify
+ * it under the terms of CeCILL-B license.
+ *
+ * @author Karell Bertet
+ * @version 2014
+ */
+
+import java.util.HashMap;
+
+/**
+ * This class register writers for the ArrowRelation class.
+ *
+ * ![ArrowRelationWriterFactory](ArrowRelationWriterFactory.png)
+ *
+ * @uml ArrowRelationWriterFactory.png
+ * !include src/lattice/ArrowRelationWriterFactory.iuml
+ * !include src/lattice/ArrowRelationWriter.iuml
+ *
+ * hide members
+ * show ArrowRelationWriterFactory members
+ * class ArrowRelationWriterFactory #LightCyan
+ * title ArrowRelationWriterFactory UML graph
+ */
+public final class ArrowRelationWriterFactory {
+    /**
+     * This class is not designed to be instantiated.
+     */
+    private ArrowRelationWriterFactory() {
+    }
+
+    /**
+     * Map of extension/writer.
+     */
+    private static HashMap<String, ArrowRelationWriter> writers = new HashMap<String, ArrowRelationWriter>();
+
+    /**
+     * Register a writer with an extension.
+     *
+     * @param   writer     The writer to register
+     * @param   extension  The extension linked to the writer
+     *
+     * @return  The old writer or null
+     */
+    public static ArrowRelationWriter register(ArrowRelationWriter writer, String extension) {
+        ArrowRelationWriter old = writers.get(extension);
+        writers.put(extension, writer);
+        return old;
+    }
+
+    /**
+     * Unregister an extension.
+     *
+     * @param   extension  The extension linked to a writer
+     *
+     * @return  The old writer or null
+     */
+    public static ArrowRelationWriter unregister(String extension) {
+        ArrowRelationWriter old = writers.get(extension);
+        writers.remove(extension);
+        return old;
+    }
+
+    /**
+     * Get the writer linked to an extension.
+     *
+     * @param   extension  The extension linked to a writer
+     *
+     * @return  The writer or null
+     */
+    public static ArrowRelationWriter get(String extension) {
+        return writers.get(extension);
+    }
+}
+
