@@ -1,0 +1,10 @@
+package lattice {
+    class ArrowRelationWriterText {
+    	-{static}ArrowRelationWriterTeX instance
+        +void write(ArrowRelation arrow, BufferedWriter file)
+        +{static}ArrowRelationWriterTeX getInstance()
+        +{static}void register()
+    }
+
+    ArrowRelationWriter <|-- ArrowRelationWriterTeX
+}
